tests/integration/formats/errors/xpath-invalid-check.txt
🔴 
🔴 1 fatal
xpath: error: Parse error
1 | //class[bad=(
                 ^

